--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -1,14 +1,11 @@
-# We have a conf and classes directory, add to BBPATH
+# We have a conf and classes directory, append to BBPATH
 BBPATH .= ":${LAYERDIR}"
 
-# We have a packages directory, add to BBFILES
-BBFILES += "${LAYERDIR}/recipes-*/*/*.bb \
-            ${LAYERDIR}/recipes-*/*/*.bbappend \
-	    ${LAYERDIR}/images/*.bb"
+# We have a recipes directory, add to BBFILES
+BBFILES += "${LAYERDIR}/recipes*/*/*.bb ${LAYERDIR}/recipes*/*/*.bbappend ${LAYERDIR}/images/*.bb"
 
 BBFILE_COLLECTIONS += "zepellin"
 BBFILE_PATTERN_zepellin := "^${LAYERDIR}/"
-BBFILE_PRIORITY_zepellin = "9"
+BBFILE_PRIORITY_zepellin = "21"
 
-LICENSE_PATH += "${LAYERDIR}/licenses"
-
+LAYERSERIES_COMPAT_zepellin = "sumo"
