Adding Meta-Ros.

--- a/conf/bblayers.conf.sample
+++ b/conf/bblayers.conf.sample
@@ -15,6 +15,7 @@ BBLAYERS ?= " \
   ${REPOROOT}/poky-sumo/meta-openembedded/meta-multimedia \
   ${REPOROOT}/poky-sumo/meta-openembedded/meta-perl \
   ${REPOROOT}/poky-sumo/meta-openembedded/meta-python \
+  ${REPOROOT}/poky-sumo/meta-ros \
   ${REPOROOT}/poky-sumo/meta-qt5 \
   ${REPOROOT}/poky-sumo/meta-raspberrypi \
   ${REPOROOT}/poky-sumo/meta-security \
