Adding correct DHCP Client Conf.

--- a/recipes-core/dhcp/dhcp/dhclient.conf
+++ b/recipes-core/dhcp/dhcp/dhclient.conf
@@ -1,8 +1,22 @@
-interface "eth0" {
-   medium "link0 link1";
-   option host-name "raspberrypi3";
-   option subnet-mask 255.255.255.0;
-   option broadcast-address 192.168.1.255;
-   option routers fritz.box;
-   option domain-name-servers fritz.box;
+backoff-cutoff 2;
+initial-interval 1;
+link-timeout 10;
+reboot 0;
+retry 10;
+select-timeout 0;
+timeout 30;
+
+interface "eth0"
+{
+  send host-name "raspberrypi3";
+  request subnet-mask,
+          broadcast-address,
+          routers,
+          domain-name,
+          domain-name-servers,
+          host-name;
+  require routers,
+          subnet-mask,
+          domain-name-servers;
 }
+
