--- a/conf/local.conf.sample
+++ b/conf/local.conf.sample
@@ -6,35 +6,34 @@ LICENSE_FLAGS_WHITELIST = "commercial"
 
 DISTRO_FEATURES = "ext2 pam opengl usbhost ${DISTRO_FEATURES_LIBC}"
 
-DISTRO_FEATURES_BACKFILL_CONSIDERED += "pulseaudio"
+#DISTRO_FEATURES_BACKFILL_CONSIDERED += "pulseaudio"
 
-PREFERRED_PROVIDER_jpeg = "libjpeg-turbo"
-PREFERRED_PROVIDER_jpeg-native = "libjpeg-turbo-native"
+#PREFERRED_PROVIDER_jpeg = "libjpeg-turbo"
+#PREFERRED_PROVIDER_jpeg-native = "libjpeg-turbo-native"
 
 PREFERRED_PROVIDER_udev = "eudev"
 VIRTUAL-RUNTIME_init_manager = "sysvinit"
 
 MACHINE_FEATURES_remove = "apm"
+# reicht aus um I2C und SPI zu aktivieren. ENABLE_* kann man sich sparen.
+MACHINE_FEATURES += "pitft"
 
 IMAGE_FSTYPES = "tar.xz"
 
-# override the meta-raspberrypi default 4.9 kernel
 PREFERRED_VERSION_linux-raspberrypi = "4.14.%"
 
 # Choose the board you are building for
-#MACHINE="raspberrypi"
-#MACHINE="raspberrypi0"
-#MACHINE="raspberrypi0-wifi"
-#MACHINE="raspberrypi2"
 MACHINE = "raspberrypi3"
-#MACHINE="raspberrypi-cm"
-#MACHINE="raspberrypi-cm3"
 
 # Choices are Image or zImage if NOT using u-boot (no u-boot is the default)
 # Choices are uImage or zImage if using u-boot, though if you choose zImage
 # with u-boot you will also have to change the boot script boot command
 KERNEL_IMAGETYPE = "zImage"
-
+RPI_EXTRA_CONFIG="kernel=zImage"
+DISBALE_SPLASH="1"
+DISABLE_RPI_BOOT_LOGO="1"
+ENABLE_SPI_BUS="1"
+ENABLE_I2C="1"
 ENABLE_UART="1"
 
 DISTRO ?= "poky"
