--- a/conf/local.conf.sample
+++ b/conf/local.conf.sample
@@ -36,6 +36,8 @@ ENABLE_SPI_BUS="1"
 ENABLE_I2C="1"
 ENABLE_UART="1"
 
+KERNEL_MODULE_AUTOLOAD += "i2c-dev"
+
 DISTRO ?= "poky"
 
 PACKAGE_CLASSES ?= "package_deb"
