--- a/conf/local.conf.sample
+++ b/conf/local.conf.sample
@@ -32,6 +32,7 @@ KERNEL_IMAGETYPE = "zImage"
 RPI_EXTRA_CONFIG="kernel=zImage"
 DISBALE_SPLASH="1"
 DISABLE_RPI_BOOT_LOGO="1"
+VIDEO_CAMERA="1"
 ENABLE_SPI_BUS="1"
 ENABLE_I2C="1"
 ENABLE_UART="1"
