--- a/conf/local.conf.sample
+++ b/conf/local.conf.sample
@@ -4,7 +4,7 @@
 
 LICENSE_FLAGS_WHITELIST = "commercial"
 
-DISTRO_FEATURES = "ext2 pam opengl usbhost ${DISTRO_FEATURES_LIBC}"
+DISTRO_FEATURES = "x11 ext2 pam opengl usbhost ${DISTRO_FEATURES_LIBC}"
 
 #DISTRO_FEATURES_BACKFILL_CONSIDERED += "pulseaudio"
 
